// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateTags renders correctly: html 1`] = `
"<link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"16x16\\" href=\\"//favicon-16-16.png?h=e417f99c\\">
<link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"24x24\\" href=\\"//favicon-24-24.png?h=cc4bfc70\\">
<link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"32x32\\" href=\\"//favicon-32-32.png?h=743850a4\\">
<link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"48x48\\" href=\\"//favicon-48-48.png?h=181f4f2a\\">
<link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"64x64\\" href=\\"//favicon-64-64.png?h=cbabb166\\">
<link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"72x72\\" href=\\"//favicon-72-72.png?h=c7487c65\\">
<link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"96x96\\" href=\\"//favicon-96-96.png?h=398fe99f\\">
<link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"128x128\\" href=\\"//favicon-128-128.png?h=e6df1a59\\">
<link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"36x36\\" href=\\"//android-chrome-36-36.png?h=5e42b185\\">
<link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"48x48\\" href=\\"//android-chrome-48-48.png?h=181f4f2a\\">
<link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"72x72\\" href=\\"//android-chrome-72-72.png?h=c7487c65\\">
<link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"96x96\\" href=\\"//android-chrome-96-96.png?h=398fe99f\\">
<link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"144x144\\" href=\\"//android-chrome-144-144.png?h=840b433e\\">
<link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"192x192\\" href=\\"//android-chrome-192-192.png?h=92503ebd\\">
<link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"256x256\\" href=\\"//android-chrome-256-256.png?h=a81e6230\\">
<link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"384x384\\" href=\\"//android-chrome-384-384.png?h=9e0a1844\\">
<link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"512x512\\" href=\\"//android-chrome-512-512.png?h=98b9621a\\">
<link rel=\\"apple-touch-icon\\" sizes=\\"57x57\\" href=\\"//apple-touch-icon-57-57.png?h=cb22b5dc\\">
<link rel=\\"apple-touch-icon\\" sizes=\\"60x60\\" href=\\"//apple-touch-icon-60-60.png?h=15d90c23\\">
<link rel=\\"apple-touch-icon\\" sizes=\\"72x72\\" href=\\"//apple-touch-icon-72-72.png?h=c7487c65\\">
<link rel=\\"apple-touch-icon\\" sizes=\\"76x76\\" href=\\"//apple-touch-icon-76-76.png?h=ae03956e\\">
<link rel=\\"apple-touch-icon\\" sizes=\\"114x114\\" href=\\"//apple-touch-icon-114-114.png?h=2dbdecba\\">
<link rel=\\"apple-touch-icon\\" sizes=\\"120x120\\" href=\\"//apple-touch-icon-120-120.png?h=0674126f\\">
<link rel=\\"apple-touch-icon\\" sizes=\\"144x144\\" href=\\"//apple-touch-icon-144-144.png?h=840b433e\\">
<link rel=\\"apple-touch-icon\\" sizes=\\"152x152\\" href=\\"//apple-touch-icon-152-152.png?h=577701bf\\">
<link rel=\\"apple-touch-icon\\" sizes=\\"167x167\\" href=\\"//apple-touch-icon-167-167.png?h=04b25d30\\">
<link rel=\\"apple-touch-icon\\" sizes=\\"180x180\\" href=\\"//apple-touch-icon-180-180.png?h=4198478c\\">
<link rel=\\"apple-touch-icon\\" sizes=\\"180x180\\" href=\\"//apple-touch-icon.png?h=4198478c\\">
<link rel=\\"apple-touch-icon\\" href=\\"//apple-touch-icon.png?h=4198478c\\">
<link rel=\\"apple-touch-icon\\" sizes=\\"180x180\\" href=\\"//apple-touch-icon-precomposed.png?h=4198478c\\">
<link rel=\\"apple-touch-icon\\" sizes=\\"1024x1024\\" href=\\"//apple-touch-icon-1024-1024.png?h=4a67560d\\">
<link rel=\\"apple-touch-icon\\" sizes=\\"512x512\\" href=\\"//apple-touch-icon-512-512.png?h=98b9621a\\">
<link rel=\\"apple-touch-icon\\" media=\\"(device-width: 414) and (device-height: 896) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)\\" href=\\"//apple-launch-xs-max-1242-2688.png?h=8faae208\\">
<link rel=\\"apple-touch-icon\\" media=\\"(device-width: 414) and (device-height: 896) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\" href=\\"//apple-launch-xr-828-1792.png?h=c6ec9a10\\">
<link rel=\\"apple-touch-icon\\" media=\\"(device-width: 375) and (device-height: 812) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)\\" href=\\"//apple-launch-xs-1125-2436.png?h=096d9ca1\\">
<link rel=\\"apple-touch-icon\\" media=\\"(device-width: 414) and (device-height: 736) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)\\" href=\\"//apple-launch-8-plus-1242-2208.png?h=589a0beb\\">
<link rel=\\"apple-touch-icon\\" media=\\"(device-width: 376) and (device-height: 667) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\" href=\\"//apple-launch-8-752-1334.png?h=259ae21f\\">
<link rel=\\"apple-touch-icon\\" media=\\"(device-width: 376) and (device-height: 667) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)\\" href=\\"//apple-launch-screen-default.png?h=c1d999ad\\">
<link rel=\\"apple-touch-icon\\" href=\\"//apple-launch-screen-default.png?h=c1d999ad\\">
<link rel=\\"apple-touch-icon\\" media=\\"(device-width: 1024) and (device-height: 1366) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\" href=\\"//apple-launch-ipad-pro-xl-2048-2732.png?h=90815530\\">
<link rel=\\"apple-touch-icon\\" media=\\"(device-width: 834) and (device-height: 1194) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\" href=\\"//apple-launch-ipad-pro-1668-2388.png?h=70001f60\\">
<link rel=\\"apple-touch-icon\\" media=\\"(device-width: 834) and (device-height: 1112) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\" href=\\"//apple-launch-ipad-pro-s-1668-2224.png?h=a1a14026\\">
<link rel=\\"apple-touch-icon\\" media=\\"(device-width: 768) and (device-height: 1024) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\" href=\\"//apple-launch-ipad-air-1536-2048.png?h=a9fc331a\\">
<link rel=\\"shortcut icon\\" href=\\"//favicon.ico?h=31dbac93\\">"
`;

exports[`generateTags renders correctly: json 1`] = `
"[
  {
    \\"rel\\": \\"icon\\",
    \\"type\\": \\"image/png\\",
    \\"sizes\\": \\"16x16\\",
    \\"href\\": \\"//favicon-16-16.png?h=e417f99c\\"
  },
  {
    \\"rel\\": \\"icon\\",
    \\"type\\": \\"image/png\\",
    \\"sizes\\": \\"24x24\\",
    \\"href\\": \\"//favicon-24-24.png?h=cc4bfc70\\"
  },
  {
    \\"rel\\": \\"icon\\",
    \\"type\\": \\"image/png\\",
    \\"sizes\\": \\"32x32\\",
    \\"href\\": \\"//favicon-32-32.png?h=743850a4\\"
  },
  {
    \\"rel\\": \\"icon\\",
    \\"type\\": \\"image/png\\",
    \\"sizes\\": \\"48x48\\",
    \\"href\\": \\"//favicon-48-48.png?h=181f4f2a\\"
  },
  {
    \\"rel\\": \\"icon\\",
    \\"type\\": \\"image/png\\",
    \\"sizes\\": \\"64x64\\",
    \\"href\\": \\"//favicon-64-64.png?h=cbabb166\\"
  },
  {
    \\"rel\\": \\"icon\\",
    \\"type\\": \\"image/png\\",
    \\"sizes\\": \\"72x72\\",
    \\"href\\": \\"//favicon-72-72.png?h=c7487c65\\"
  },
  {
    \\"rel\\": \\"icon\\",
    \\"type\\": \\"image/png\\",
    \\"sizes\\": \\"96x96\\",
    \\"href\\": \\"//favicon-96-96.png?h=398fe99f\\"
  },
  {
    \\"rel\\": \\"icon\\",
    \\"type\\": \\"image/png\\",
    \\"sizes\\": \\"128x128\\",
    \\"href\\": \\"//favicon-128-128.png?h=e6df1a59\\"
  },
  {
    \\"rel\\": \\"icon\\",
    \\"type\\": \\"image/png\\",
    \\"sizes\\": \\"36x36\\",
    \\"href\\": \\"//android-chrome-36-36.png?h=5e42b185\\"
  },
  {
    \\"rel\\": \\"icon\\",
    \\"type\\": \\"image/png\\",
    \\"sizes\\": \\"48x48\\",
    \\"href\\": \\"//android-chrome-48-48.png?h=181f4f2a\\"
  },
  {
    \\"rel\\": \\"icon\\",
    \\"type\\": \\"image/png\\",
    \\"sizes\\": \\"72x72\\",
    \\"href\\": \\"//android-chrome-72-72.png?h=c7487c65\\"
  },
  {
    \\"rel\\": \\"icon\\",
    \\"type\\": \\"image/png\\",
    \\"sizes\\": \\"96x96\\",
    \\"href\\": \\"//android-chrome-96-96.png?h=398fe99f\\"
  },
  {
    \\"rel\\": \\"icon\\",
    \\"type\\": \\"image/png\\",
    \\"sizes\\": \\"144x144\\",
    \\"href\\": \\"//android-chrome-144-144.png?h=840b433e\\"
  },
  {
    \\"rel\\": \\"icon\\",
    \\"type\\": \\"image/png\\",
    \\"sizes\\": \\"192x192\\",
    \\"href\\": \\"//android-chrome-192-192.png?h=92503ebd\\"
  },
  {
    \\"rel\\": \\"icon\\",
    \\"type\\": \\"image/png\\",
    \\"sizes\\": \\"256x256\\",
    \\"href\\": \\"//android-chrome-256-256.png?h=a81e6230\\"
  },
  {
    \\"rel\\": \\"icon\\",
    \\"type\\": \\"image/png\\",
    \\"sizes\\": \\"384x384\\",
    \\"href\\": \\"//android-chrome-384-384.png?h=9e0a1844\\"
  },
  {
    \\"rel\\": \\"icon\\",
    \\"type\\": \\"image/png\\",
    \\"sizes\\": \\"512x512\\",
    \\"href\\": \\"//android-chrome-512-512.png?h=98b9621a\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"sizes\\": \\"57x57\\",
    \\"href\\": \\"//apple-touch-icon-57-57.png?h=cb22b5dc\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"sizes\\": \\"60x60\\",
    \\"href\\": \\"//apple-touch-icon-60-60.png?h=15d90c23\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"sizes\\": \\"72x72\\",
    \\"href\\": \\"//apple-touch-icon-72-72.png?h=c7487c65\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"sizes\\": \\"76x76\\",
    \\"href\\": \\"//apple-touch-icon-76-76.png?h=ae03956e\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"sizes\\": \\"114x114\\",
    \\"href\\": \\"//apple-touch-icon-114-114.png?h=2dbdecba\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"sizes\\": \\"120x120\\",
    \\"href\\": \\"//apple-touch-icon-120-120.png?h=0674126f\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"sizes\\": \\"144x144\\",
    \\"href\\": \\"//apple-touch-icon-144-144.png?h=840b433e\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"sizes\\": \\"152x152\\",
    \\"href\\": \\"//apple-touch-icon-152-152.png?h=577701bf\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"sizes\\": \\"167x167\\",
    \\"href\\": \\"//apple-touch-icon-167-167.png?h=04b25d30\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"sizes\\": \\"180x180\\",
    \\"href\\": \\"//apple-touch-icon-180-180.png?h=4198478c\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"sizes\\": \\"180x180\\",
    \\"href\\": \\"//apple-touch-icon.png?h=4198478c\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"href\\": \\"//apple-touch-icon.png?h=4198478c\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"sizes\\": \\"180x180\\",
    \\"href\\": \\"//apple-touch-icon-precomposed.png?h=4198478c\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"sizes\\": \\"1024x1024\\",
    \\"href\\": \\"//apple-touch-icon-1024-1024.png?h=4a67560d\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"sizes\\": \\"512x512\\",
    \\"href\\": \\"//apple-touch-icon-512-512.png?h=98b9621a\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"media\\": \\"(device-width: 414) and (device-height: 896) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)\\",
    \\"href\\": \\"//apple-launch-xs-max-1242-2688.png?h=8faae208\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"media\\": \\"(device-width: 414) and (device-height: 896) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\",
    \\"href\\": \\"//apple-launch-xr-828-1792.png?h=c6ec9a10\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"media\\": \\"(device-width: 375) and (device-height: 812) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)\\",
    \\"href\\": \\"//apple-launch-xs-1125-2436.png?h=096d9ca1\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"media\\": \\"(device-width: 414) and (device-height: 736) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)\\",
    \\"href\\": \\"//apple-launch-8-plus-1242-2208.png?h=589a0beb\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"media\\": \\"(device-width: 376) and (device-height: 667) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\",
    \\"href\\": \\"//apple-launch-8-752-1334.png?h=259ae21f\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"media\\": \\"(device-width: 376) and (device-height: 667) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)\\",
    \\"href\\": \\"//apple-launch-screen-default.png?h=c1d999ad\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"href\\": \\"//apple-launch-screen-default.png?h=c1d999ad\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"media\\": \\"(device-width: 1024) and (device-height: 1366) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\",
    \\"href\\": \\"//apple-launch-ipad-pro-xl-2048-2732.png?h=90815530\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"media\\": \\"(device-width: 834) and (device-height: 1194) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\",
    \\"href\\": \\"//apple-launch-ipad-pro-1668-2388.png?h=70001f60\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"media\\": \\"(device-width: 834) and (device-height: 1112) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\",
    \\"href\\": \\"//apple-launch-ipad-pro-s-1668-2224.png?h=a1a14026\\"
  },
  {
    \\"rel\\": \\"apple-touch-icon\\",
    \\"media\\": \\"(device-width: 768) and (device-height: 1024) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\",
    \\"href\\": \\"//apple-launch-ipad-air-1536-2048.png?h=a9fc331a\\"
  },
  {
    \\"rel\\": \\"shortcut icon\\",
    \\"href\\": \\"//favicon.ico?h=31dbac93\\"
  }
]"
`;

exports[`generateTags renders correctly: jsx 1`] = `
"import React from \\"react\\"

const Icons = () => (<>
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"16x16\\" href=\\"//favicon-16-16.png?h=e417f99c\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"24x24\\" href=\\"//favicon-24-24.png?h=cc4bfc70\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"32x32\\" href=\\"//favicon-32-32.png?h=743850a4\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"48x48\\" href=\\"//favicon-48-48.png?h=181f4f2a\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"64x64\\" href=\\"//favicon-64-64.png?h=cbabb166\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"72x72\\" href=\\"//favicon-72-72.png?h=c7487c65\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"96x96\\" href=\\"//favicon-96-96.png?h=398fe99f\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"128x128\\" href=\\"//favicon-128-128.png?h=e6df1a59\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"36x36\\" href=\\"//android-chrome-36-36.png?h=5e42b185\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"48x48\\" href=\\"//android-chrome-48-48.png?h=181f4f2a\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"72x72\\" href=\\"//android-chrome-72-72.png?h=c7487c65\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"96x96\\" href=\\"//android-chrome-96-96.png?h=398fe99f\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"144x144\\" href=\\"//android-chrome-144-144.png?h=840b433e\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"192x192\\" href=\\"//android-chrome-192-192.png?h=92503ebd\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"256x256\\" href=\\"//android-chrome-256-256.png?h=a81e6230\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"384x384\\" href=\\"//android-chrome-384-384.png?h=9e0a1844\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"512x512\\" href=\\"//android-chrome-512-512.png?h=98b9621a\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"57x57\\" href=\\"//apple-touch-icon-57-57.png?h=cb22b5dc\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"60x60\\" href=\\"//apple-touch-icon-60-60.png?h=15d90c23\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"72x72\\" href=\\"//apple-touch-icon-72-72.png?h=c7487c65\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"76x76\\" href=\\"//apple-touch-icon-76-76.png?h=ae03956e\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"114x114\\" href=\\"//apple-touch-icon-114-114.png?h=2dbdecba\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"120x120\\" href=\\"//apple-touch-icon-120-120.png?h=0674126f\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"144x144\\" href=\\"//apple-touch-icon-144-144.png?h=840b433e\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"152x152\\" href=\\"//apple-touch-icon-152-152.png?h=577701bf\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"167x167\\" href=\\"//apple-touch-icon-167-167.png?h=04b25d30\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"180x180\\" href=\\"//apple-touch-icon-180-180.png?h=4198478c\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"180x180\\" href=\\"//apple-touch-icon.png?h=4198478c\\" />
  <link rel=\\"apple-touch-icon\\" href=\\"//apple-touch-icon.png?h=4198478c\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"180x180\\" href=\\"//apple-touch-icon-precomposed.png?h=4198478c\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"1024x1024\\" href=\\"//apple-touch-icon-1024-1024.png?h=4a67560d\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"512x512\\" href=\\"//apple-touch-icon-512-512.png?h=98b9621a\\" />
  <link rel=\\"apple-touch-icon\\" media=\\"(device-width: 414) and (device-height: 896) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)\\" href=\\"//apple-launch-xs-max-1242-2688.png?h=8faae208\\" />
  <link rel=\\"apple-touch-icon\\" media=\\"(device-width: 414) and (device-height: 896) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\" href=\\"//apple-launch-xr-828-1792.png?h=c6ec9a10\\" />
  <link rel=\\"apple-touch-icon\\" media=\\"(device-width: 375) and (device-height: 812) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)\\" href=\\"//apple-launch-xs-1125-2436.png?h=096d9ca1\\" />
  <link rel=\\"apple-touch-icon\\" media=\\"(device-width: 414) and (device-height: 736) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)\\" href=\\"//apple-launch-8-plus-1242-2208.png?h=589a0beb\\" />
  <link rel=\\"apple-touch-icon\\" media=\\"(device-width: 376) and (device-height: 667) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\" href=\\"//apple-launch-8-752-1334.png?h=259ae21f\\" />
  <link rel=\\"apple-touch-icon\\" media=\\"(device-width: 376) and (device-height: 667) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)\\" href=\\"//apple-launch-screen-default.png?h=c1d999ad\\" />
  <link rel=\\"apple-touch-icon\\" href=\\"//apple-launch-screen-default.png?h=c1d999ad\\" />
  <link rel=\\"apple-touch-icon\\" media=\\"(device-width: 1024) and (device-height: 1366) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\" href=\\"//apple-launch-ipad-pro-xl-2048-2732.png?h=90815530\\" />
  <link rel=\\"apple-touch-icon\\" media=\\"(device-width: 834) and (device-height: 1194) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\" href=\\"//apple-launch-ipad-pro-1668-2388.png?h=70001f60\\" />
  <link rel=\\"apple-touch-icon\\" media=\\"(device-width: 834) and (device-height: 1112) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\" href=\\"//apple-launch-ipad-pro-s-1668-2224.png?h=a1a14026\\" />
  <link rel=\\"apple-touch-icon\\" media=\\"(device-width: 768) and (device-height: 1024) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\" href=\\"//apple-launch-ipad-air-1536-2048.png?h=a9fc331a\\" />
  <link rel=\\"shortcut icon\\" href=\\"//favicon.ico?h=31dbac93\\" />
</>);

export default Icons;"
`;

exports[`generateTags renders correctly: tsx 1`] = `
"import React from \\"react\\"

const Icons: React.FC = () => (<>
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"16x16\\" href=\\"//favicon-16-16.png?h=e417f99c\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"24x24\\" href=\\"//favicon-24-24.png?h=cc4bfc70\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"32x32\\" href=\\"//favicon-32-32.png?h=743850a4\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"48x48\\" href=\\"//favicon-48-48.png?h=181f4f2a\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"64x64\\" href=\\"//favicon-64-64.png?h=cbabb166\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"72x72\\" href=\\"//favicon-72-72.png?h=c7487c65\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"96x96\\" href=\\"//favicon-96-96.png?h=398fe99f\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"128x128\\" href=\\"//favicon-128-128.png?h=e6df1a59\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"36x36\\" href=\\"//android-chrome-36-36.png?h=5e42b185\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"48x48\\" href=\\"//android-chrome-48-48.png?h=181f4f2a\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"72x72\\" href=\\"//android-chrome-72-72.png?h=c7487c65\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"96x96\\" href=\\"//android-chrome-96-96.png?h=398fe99f\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"144x144\\" href=\\"//android-chrome-144-144.png?h=840b433e\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"192x192\\" href=\\"//android-chrome-192-192.png?h=92503ebd\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"256x256\\" href=\\"//android-chrome-256-256.png?h=a81e6230\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"384x384\\" href=\\"//android-chrome-384-384.png?h=9e0a1844\\" />
  <link rel=\\"icon\\" type=\\"image/png\\" sizes=\\"512x512\\" href=\\"//android-chrome-512-512.png?h=98b9621a\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"57x57\\" href=\\"//apple-touch-icon-57-57.png?h=cb22b5dc\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"60x60\\" href=\\"//apple-touch-icon-60-60.png?h=15d90c23\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"72x72\\" href=\\"//apple-touch-icon-72-72.png?h=c7487c65\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"76x76\\" href=\\"//apple-touch-icon-76-76.png?h=ae03956e\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"114x114\\" href=\\"//apple-touch-icon-114-114.png?h=2dbdecba\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"120x120\\" href=\\"//apple-touch-icon-120-120.png?h=0674126f\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"144x144\\" href=\\"//apple-touch-icon-144-144.png?h=840b433e\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"152x152\\" href=\\"//apple-touch-icon-152-152.png?h=577701bf\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"167x167\\" href=\\"//apple-touch-icon-167-167.png?h=04b25d30\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"180x180\\" href=\\"//apple-touch-icon-180-180.png?h=4198478c\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"180x180\\" href=\\"//apple-touch-icon.png?h=4198478c\\" />
  <link rel=\\"apple-touch-icon\\" href=\\"//apple-touch-icon.png?h=4198478c\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"180x180\\" href=\\"//apple-touch-icon-precomposed.png?h=4198478c\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"1024x1024\\" href=\\"//apple-touch-icon-1024-1024.png?h=4a67560d\\" />
  <link rel=\\"apple-touch-icon\\" sizes=\\"512x512\\" href=\\"//apple-touch-icon-512-512.png?h=98b9621a\\" />
  <link rel=\\"apple-touch-icon\\" media=\\"(device-width: 414) and (device-height: 896) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)\\" href=\\"//apple-launch-xs-max-1242-2688.png?h=8faae208\\" />
  <link rel=\\"apple-touch-icon\\" media=\\"(device-width: 414) and (device-height: 896) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\" href=\\"//apple-launch-xr-828-1792.png?h=c6ec9a10\\" />
  <link rel=\\"apple-touch-icon\\" media=\\"(device-width: 375) and (device-height: 812) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)\\" href=\\"//apple-launch-xs-1125-2436.png?h=096d9ca1\\" />
  <link rel=\\"apple-touch-icon\\" media=\\"(device-width: 414) and (device-height: 736) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)\\" href=\\"//apple-launch-8-plus-1242-2208.png?h=589a0beb\\" />
  <link rel=\\"apple-touch-icon\\" media=\\"(device-width: 376) and (device-height: 667) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\" href=\\"//apple-launch-8-752-1334.png?h=259ae21f\\" />
  <link rel=\\"apple-touch-icon\\" media=\\"(device-width: 376) and (device-height: 667) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3)\\" href=\\"//apple-launch-screen-default.png?h=c1d999ad\\" />
  <link rel=\\"apple-touch-icon\\" href=\\"//apple-launch-screen-default.png?h=c1d999ad\\" />
  <link rel=\\"apple-touch-icon\\" media=\\"(device-width: 1024) and (device-height: 1366) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\" href=\\"//apple-launch-ipad-pro-xl-2048-2732.png?h=90815530\\" />
  <link rel=\\"apple-touch-icon\\" media=\\"(device-width: 834) and (device-height: 1194) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\" href=\\"//apple-launch-ipad-pro-1668-2388.png?h=70001f60\\" />
  <link rel=\\"apple-touch-icon\\" media=\\"(device-width: 834) and (device-height: 1112) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\" href=\\"//apple-launch-ipad-pro-s-1668-2224.png?h=a1a14026\\" />
  <link rel=\\"apple-touch-icon\\" media=\\"(device-width: 768) and (device-height: 1024) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2)\\" href=\\"//apple-launch-ipad-air-1536-2048.png?h=a9fc331a\\" />
  <link rel=\\"shortcut icon\\" href=\\"//favicon.ico?h=31dbac93\\" />
</>);

export default Icons;"
`;
